# evecapnav

./: .gitignore  Dockerfile  JUMP_API.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: playwright.yml  ruff.yml  ty.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
src/: application.py  cache.py  constants.py  esi.py  jump_graph.py  main.py  pathfinder.py  routes.py  systems.py  tasks.py  zkill.py
src/api/: __init__.py  intel_controller.py  map_controller.py  route_controller.py  ship_controller.py  system_controller.py
src/clients/: esi_client.py  zkill_client.py
src/models/: models.py
src/pathfinder/: __init__.py  cost.py  diagnostics.py  dispatcher.py  graph_builder.py  multi_label.py  single_criterion.py  types.py
src/schemas/: route.py  ship.py  system.py
src/services/: intel_service.py  map_service.py  route_service.py  system_service.py
src/stores/: celestial_store.py  gate_store.py  intel_cache_store.py  ship_store.py  system_store.py
src/tasks/: __init__.py  intel_tasks.py
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_fe_alternatives.py  test_fe_dark_theme.py  test_fe_error_states.py  test_fe_form_controls.py  test_fe_persistence.py  test_fe_progress_and_loading.py  test_fe_response_shape_robustness.py  test_fe_route_render.py  test_fe_route_table.py  test_fe_search.py  test_fe_ship_picker.py  test_fe_smoke.py  test_fe_summary_card.py  test_fe_swap.py  test_threat_modal.py  test_threat_weighting.py
(+20 files in other folders)
